# tabular-synth-eval-agent

./: LICENSE  README.md  pyproject.toml  report.md  requirements.txt
examples/: real_sample.csv  synth_sample.csv
notes/: scope.md
src/: __init__.py  agent.py  report.py  tools.py
